# youte

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENCE  README.md  documentation.qmd  index.qmd  mkdocs.yml  noxfile.py  pyproject.toml  requirements-mkdocs.txt  setup.cfg  setup.py  styles.css  tutorial.qmd
.github/workflows/: static.yml
docs/: about.html  documentation.html  documentation.md  guide.html  index.html  index.md  reference.md  search.json  styles.css  tutorial.html  tutorial.md
docs/stylesheets/: extra.css
manuals/: _quarto.yml  index.qmd
manuals/.quarto/idx/: about.qmd.json  index.qmd.json
manuals/.quarto/preview/: lock
manuals/.quarto/xref/: INDEX  bc4a9bbd
manuals/docs/: index.html
quarto/: _quarto.yml  index.qmd  styles.css
src/youte/: __main__.py  _logging.py  _typing.py  cli.py  collector.py  common.py  config.py  database.py  exceptions.py  parser.py  quota.py  resources.py  table_mappings.py  tidier.py  utilities.py  version.py
src/youtupy/: __main__.py  collector.py  collector_class.py  config.py  databases.py  exceptions.py  original.py  process.py  quota.py  table_mappings.py  tidier.py  tidy.py  utilities.py
tests/: test_archive.py  test_cli.py  test_collector.py  test_hydrator.py  test_parser.py  test_tidy.py
tutorials/: .gitignore  intro_to_youte.html  intro_to_youte.qmd  styling.css  styling_doc.css  tutorial.qmd
