[metadata]
name = youtupy
version = 0.0.1
author = Digital Observatory
author_email = digitalobservatory@qut.edu.au
description = A commandline utility to collect video metadata using YouTube API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QUT-Digital-Observatory/youtupy
project_urls =
    Bug Tracker = https://github.com/QUT-Digital-Observatory/youtupy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    click >= 8.0.3
    requests
    python-dateutil
    tqdm
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    youtupy = youtupy.__main__:youtupy


