[metadata]
name = youte
author = Digital Observatory
author_email = digitalobservatory@qut.edu.au
description = A commandline utility to collect video metadata using YouTube API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QUT-Digital-Observatory/youte
project_urls =
    Bug Tracker = https://github.com/QUT-Digital-Observatory/youte/issues
classifiers =
    Programming Language :: Python :: 3git 
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    click >= 8.0.3
    requests >= 2.27.1
    python-dateutil >= 2.8.2
    configobj >= 5.0.6
    typing_extensions >= 4.5.0
    SQLAlchemy >= 2.0.7
    pydantic >= 1.10.7
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    youte = youte.cli:youte

[semantic_release]
version_variable = setup.py:__version__
version_source = tag
